fixed navbar-collapse display

--- a/app/stylesheets/pages/home.scss
+++ b/app/stylesheets/pages/home.scss
@@ -60,29 +60,7 @@
   transform: scale(1.1, 1.1);*/
   
 }
-/*.html-icon {
-  max-width: 100%;
-  order: 1;
-  
-  transform: scale(1.1, 1.1);
-  object-fit: contain;
-}
 
-.js-icon {
-  max-width: 100%;
-  order: 1;
-  
-  transform: scale(1.1, 1.1);
-  object-fit: contain;
-}
-
-.git-icon {
-  max-width: 100%;
-  order: 1;
-  
-  transform: scale(1.1, 1.1);
-  object-fit: contain;
-}*/
 
 @media only screen and (max-width: 768px) {
     
@@ -100,7 +78,7 @@
 
 @media (min-width: 769px) {
     .navbar-collapse {
-      display: none !important;
+      opacity: 0 !important;
     }
 
 
@@ -109,9 +87,9 @@
     
 .hamburger {
     position: absolute;
-    right: 12px;
+    right: 4px;
     height: 50px;
-    width: 50px;
+    width: 45px;
     font-size: 6px;
     /*border: 2px solid red;*/
     padding-top: 8px;
@@ -125,14 +103,15 @@
 }
 .navbar-collapse {
    position: fixed;
-   right: 7px;
+   right: 0px;
    top: 50px;
-   display: flex; 
-   /*height: 15vw;
-   width: 10vw;*/
+   display: none;
+   
    height: 60px;
-   width: 60px;
-   padding-left: 5px;
+   width: 50px;
+   padding: 0px !important;
+
+   
    
    
    
@@ -151,18 +130,24 @@
    /*display: none;*/
    
 }
+.navbar-list {
+  margin: 5px;
+}
+
+.navbar-list li {
+  list-style-type: none;
+  /*margin-right: 5px;*/
+
+}
+
 .navbar-list a {
   text-decoration: none;
+  
   color: white;
   cursor: pointer;
 }
 
-/*.navbar-list ul {
-  display: flex;
-  vertical-align: center;
 
-
-}*/
 
 
 
@@ -196,8 +181,8 @@
   list-style: none;
   color: grey;
   text-align: center;
-  padding: 0;
-  margin: 0;
+  /*padding: 0;
+  margin: 0;*/
 }
 .nav li {
   font-family: 'Oswald', sans-serif;
@@ -209,7 +194,7 @@
   line-height: 50px;
   font-size: 15px;
   display: inline;
-  margin-right: -4px;
+  margin-left: -4px;
   float: right;
   
   /*border-bottom: 1px solid #888;*/
@@ -338,6 +323,11 @@
   font-size: 1.5vw;
   font-weight: bold;
 
+
+}
+
+.summary-body {
+  white-space: pre-wrap;
 }
 
 .tech-icon-box {
@@ -345,7 +335,7 @@
   display: flex;
   justify-content: space-around;
   color: #EE2C2C;
-  top: 25vw;
+  top: 25.5vw;
   left: 42.5vw;
   height: 2.4vw;
   width: 15vw;
@@ -511,7 +501,8 @@
 
 .contact-info-box {
   position: absolute;
-  left: 5vw;
+  top: 3.5vw;
+  left: 10vw;
   width: 45vw;
   height: 40vw;
   
